2013-04-17
----------
- adds a new "update" mode that streams JavaScript "diffs" that can be used by
  a server to live-reload/update a page (usually in development)
- adds a heads-up display of compilation errors on the page

2013-04-09
----------
- adds support for LESS CSS
- improved development reloader:
    - stays alive after errors in JavaScript and LESS compilation
- improved logging:
    - colorized output
    - formatted on one line
    - adjustable verbosity

2012-07-28
----------
- JavaScript code is now wrapped in closures on output.
- in HTML files, instead of compiling each CSS and JavaScript resource
  separately and injecting it where the link or script tag was in the page, all
  such dependencies are combined into a single compiled unit, and inline scripts
  or styles are included now as well. The CSS generated in this way is injected
  at the end of the head; JavaScript is injected at the end of the body.